full-moon/tests/luau_declarations_cases/fail/parser/declared_function_no_arg_types/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/luau_declarations_cases/fail/parser/declared_function_no_arg_types
---
error[ast]: expected `:` after parameter name
  ┌─ source.lua:1:22
  │
1 │ declare function foo(a): number
  │                      ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:23
  │
1 │ declare function foo(a): number
  │                       ^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:1:32
  │
1 │ declare function foo(a): number
  │                                ^
